common-cache update